# yes-chef

./: .env.example  .gitignore  AI_ENGINEERING_PRINCIPLES.md  ARCHITECTURE.md  Dockerfile  README.md  challenge_instructions.md  docker-compose.yml  pyproject.toml  test_stream.py
alembic/: env.py
alembic/versions/: f6de55b84146_initial_migration.py
app/: main.py
app/agent/: state.py
app/agent/contracts/: __init__.py  item_pipeline.py
app/agent/nodes/: batch_router.py  (+7 more)
app/application/: estimation_orchestrator.py  estimation_service.py  graph_builder.py  knowledge_store.py  progress_observer.py  schema_validator.py  stream_events.py  work_units.py
app/domain/: entities.py  repositories.py  value_objects.py
app/infrastructure/: catalog_index.py  database.py  llm_client.py  models.py  postgres_repositories.py  settings.py
app/presentation/: dependencies.py  routes.py  schemas.py  stats_stream.py
artifacts/live-smoke/: single_menu.json  small_menu.json
artifacts/request-debug/: README.txt  summary.md
artifacts/stress-test/: README.md  menu_100_items.json  menu_250_items.json  menu_500_items.json
data/: quote_schema.json
docs/plans/: 2026-03-06-yes-chef-design.md
docs/runbooks/: agent_optimization_runbook.md
scripts/: deploy-vm.sh  generate_stress_menus.py
tests/: helpers.py  test_api_routes.py  test_batch_worker.py  test_catalog_resolver_knowledge.py  test_challenge_smoke.py  test_live_llm_flow.py  test_planning_prompts.py  test_service_and_repositories.py  test_stream_viewer.py  test_tools_and_validation.py  test_work_units_and_nodes.py
(+11 files in other folders)
