[project]
name = "yes-chef"
version = "0.1.0"
description = "AI Agent for catering estimation — decomposes menus, matches ingredients against Sysco catalog, and produces per-unit cost quotes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "rapidfuzz>=3.0.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.14.0",
    "chromadb>=1.5.2",
    "numpy>=2.4.2",
    "httpx>=0.28.1",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",
    "SIM108",
] # B008: FastAPI Depends pattern, SIM108: ternary preference

[tool.ruff.lint.isort]
known-first-party = ["app"]
